# python-noiselab

./: .gitmodules  LICENSE  Pipfile  pyproject.toml  requirements.txt  setup.cfg  setup.py
examples/: TDigest distributions.ipynb
noiselab/: __init__.py
noiselab/adev/: .gitignore  __init__.py  _adev.c  _adev.pyi  _adev.pyx  base.py  oavar.py
noiselab/generators/: .gitignore  __init__.py  _markov.c  _markov.pyi  _markov.pyx  _relaxation.c  _relaxation.pyx  base.py  markov.py  relaxation.py  white.py  wiener.py
noiselab/tdigest/: .gitignore  __init__.py  _tdigest.c  _tdigest.pyi  _tdigest.pyx
tests/adev/: .gitignore  test_oavar.py  test_realtime.py
tests/tdigest/: test_tdigest.py
