[metadata]
name = noiselab
version = 0.1.0
description = 'Efficient algorithms for noise generation and analysis in Python.'
author = "Jonathan Kohler"
author_email = kohler.jonathan@gmail.com
license = MIT
url = https://github.com/kohlerjl/python-noiselab
project_urls = 
    Source Code = https://github.com/kohlerjl/python-noiselab
    Download = https://pypi.python.org/pypi/noiselab
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = any
classifier =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
    numpy >= 1.23
    scipy
setup_requires =
    pytest
    cython >= 0.29
    numpy >= 1.23

[options.package_data]
* = *.pyx

[options.packages.find]
exclude =
    examples*
    tests*
